--- a/css/main.css
+++ b/css/main.css
@@ -18,20 +18,22 @@ a{
     text-decoration: none;
 }
 .global-nav {
-    height: 80px;
+    height: 44px;
+    padding: 0 1rem;
 }
 .local-nav {
-    height: 100;
+    height: 52;
+    padding: 0 1rem;
     border-bottom: 1px solid #ddd;
+
 }
 .global-nav-links,
 .local-nav-links{
     display: flex;
     align-items: center;
-    max-width: 2000px;
+    max-width: 1000px;
     height: 100%;
     margin: 0px auto;
-    font-colo;
 }
 .global-nav-links {
     justify-content: space-between;
@@ -43,5 +45,8 @@ a{
 .local-nav-links a:not(.product-name) {
     margin-left: 2em;
     font-size: 0.8rem;
+}
+.scroll-section {
+    padding-top: 50vh;
 }
    
