--- a/css/main.css
+++ b/css/main.css
@@ -18,14 +18,21 @@ a{
     text-decoration: none;
 }
 .global-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 44px;
     padding: 0 1rem;
 }
 .local-nav {
+    position: absolute;
+    top: 45px;
+    left: 0;
+    width: 100%;
     height: 52;
     padding: 0 1rem;
     border-bottom: 1px solid #ddd;
-
 }
 .global-nav-links,
 .local-nav-links{
@@ -34,19 +41,104 @@ a{
     max-width: 1000px;
     height: 100%;
     margin: 0px auto;
+    font-size: 1rem;
 }
 .global-nav-links {
     justify-content: space-between;
 }
 .local-nav-links .product-name {
     margin-right: auto;
-    font-size: 1.2rem;
+    font-size: 2rem;
 }
 .local-nav-links a:not(.product-name) {
     margin-left: 2em;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
-.scroll-section {
+.scroll-section{
+    border: 3px solid red;
     padding-top: 50vh;
+} 
+#scroll-section-0 h1{
+    font-size: 4rem;
+    text-align: center;
+} 
+.main-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 6px;
+    height: 3em;
+    font-size: 2.5rem;
 }
-   
+.main-message p {
+    font-weight: bold;
+    text-align: center;
+    line-height: 1.2;
+}
+.description { 
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    font-size: 1.2;
+    color: #888;
+}
+.description strong {
+    float: left;
+    margin-right: 0.2em;
+    font-size: 3rem;
+    color: rgb(28, 28, 31);
+}
+.main-message small {
+    display: block;
+    margin-bottom: 0.5em;
+    font-size: 1rem;
+} 
+#scroll-section-2 .main-message {
+    font-size: 3.5rem;
+}  
+.desc-message {
+    width: 50%;
+    font-weight: bold;
+}
+.pin {
+    width: 1px;
+    height: 100px;
+    background: rgb(28, 28, 31);
+}
+.mid-message {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    font-size: 2rem;
+    color: #888;
+}
+.mid-message strong {
+    color:rgb(28, 28, 31)
+}
+.canvas-caption {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 1rem;
+    font-size: 1.2rem;
+    color: #888;
+}
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 7rem;
+    border-top: 0.1px solid #ddd;
+}
+.sticky-elem {
+    display: none;
+     position: fixed;
+     top: 0; 
+     left: 0;
+     width: 100%;  
+}
+#show-scene-0 #scroll-section-0 .sticky-elem,
+#show-scene-1 #scroll-section-1 .sticky-elem,
+#show-scene-2 #scroll-section-2 .sticky-elem,
+#show-scene-3 #scroll-section-3 .sticky-elem {
+    display: block;
+}
